# lab9

lab9/: .gitignore  README.md  pyproject.toml  requirements.txt
lab9/app/: __init__.py  main.py  models.py
lab9/app/core/: config.py  db.py
lab9/app/modules/divisions/: schema.py  views.py
lab9/app/modules/employees/: schema.py  views.py
lab9/app/modules/job/: schema.py  views.py
lab9/app/modules/positions/: schema.py  views.py
lab9/migrations/: env.py
lab9/migrations/versions/: 3cf073d02320_add_user_tbl.py  a6b8984c9ee6_add_user_tbl.py
