[tool.poetry]
name = "lb9"
version = "0.1.0"
description = ""
authors = ["keshe4ka <a.anaschenko@btc-s.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
